test/compile-errors/extern-checks.crow
r record extern
	a str
	b nat64[]

u union extern
	a str

f void() noctx extern<c>

f void() extern<c>

f str() noctx extern<c>

f void(a str) noctx extern<c>

f<a> void(a a) noctx extern<c>

f void(...a nat64[]) noctx extern<c>

some-spec spec
	foo void()

f void() noctx extern<c> some-spec
